note/reva/002-Data_Structure-<03-01-2025>.txt
ERROR <1>:
❯ gcc test_3.c -o test_3
test_3.c: In function ‘main’:
test_3.c:44:59: error: passing argument 3 of ‘cal’ makes integer from pointer witho
ut a cast [-Wint-conversion]
   44 |     printf("%d %c %d :- %f\n", a, operation, b, cal(a, b, operation));
      |                                                           ^~~~~~~~~
      |                                                           |
      |                                                           char *
test_3.c:3:39: note: expected ‘char’ but argument is of type ‘char *’
    3 | float cal(int first, int second, char operation){
      |                                  ~~~~~^~~~~~~~~


